--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments <strong class="caret"></strong></a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a href="#"><span class="glyphicon glyphicon-ruble" aria-hidden="true"></span>Maths & Statistics</a>
+                    <a href="#"><span class="glyphicon glyphicon-ruble" aria-hidden="true"></span>Maths & content</a>
                   </li
                   <li>
                     <a href="#"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>Computer Science</a>
@@ -128,7 +128,7 @@
         <article class="col-md-4" id="domain_registration">
 			  <h3>About</h3>
 			  <p>The college has deployed the academic flexibility of its Autonomous status to package a unique educational programme that is framed in collaboration with top notch academicians and industry experts to embrace the emerging trends in academics and industry.</p>
-			  <a href="#myModal" class="btn btn-primary" data-toggle="modal">Read More</a>
+			  <a href="#" class="btn btn-primary" data-toggle="modal">Read More</a>
 
         </article>
         <article class="col-md-4" id="web_design">
@@ -154,15 +154,14 @@ To integrate in the students the ennobling virtues of truth, fairness, tolerance
 	 </figure>
 				 <p class="description" align="justify">A College is seen as a stepping stone to a sound career. But a degree alone doesn't equip one to become an exceptional professional. That is why our approach at St. Mary's has always been holistic. Education here means - academics coupled with a conducive and friendly environment, new-age technology.
 	 </p>
-	 <a href="#myModal" class="btn btn-primary" data-toggle="modal">View More</a>
-			 </div>
+<button class="btn btn-primary">View More</button>			 </div>
 			 <div class="col-xs-4 showcase_unit">
 	 <h1 class="name">Interaction</h1>
 				 <figure>
 		 <img class="img-responsive center-block" src="includes/image/2.jpg" alt="Error Loading Images"><br><br>
 	 </figure>
 				 <p class="description" align="justify">The management, then contemplated on offering higher education to the students in a better atmosphere and with the state of the art infrastructure. There was a vision and it made its beginning in 2002 when a beautiful, state of art college building emerged in Yousufguda, reflecting the dreams of the management.
- </p>	<a href="#myModal" class="btn btn-primary" data-toggle="modal">Read More</a>
+ </p>	<button class="btn btn-primary">View More</button>
 			 </div>
 			 <div class="col-xs-4 showcase_unit">
 	 <h1 class="name" align="center">Classrooms</h1>
@@ -173,7 +172,7 @@ To integrate in the students the ennobling virtues of truth, fairness, tolerance
 					 It organizes the collection to provide a prompt and efficient service to the users.
 					 It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.A College is seen as a stepping stone to a sound career
 </p>
-	 <a href="#myModal" class="btn btn-primary" data-toggle="modal">View More</a>
+	 <button class="btn btn-primary">View More</button>
 			 </div>
 		 </section> <!-- end showcase-1 -->
 					</div><!-- end features -->
@@ -194,8 +193,8 @@ We shall continue to endeavor to give the best to our students as we have always
         </div>
       </section> <!-- end web_insight -->
 
-      <section class="row" id="statistics">
-        <div class="col-md-8 col-sm-6 col-xs-12" id="statistics_content">
+      <section class="row" id="content">
+        <div class="col-md-8 col-sm-6 col-xs-12" id="content_content">
 			<article>
 				<h2>Friendly Environment</h2>
 				<p>28 Airy and well ventilated classrooms of 610 sq. ft. approx. each,spread on 4 floors of the college, connected by long and clean corridors, maintained through out the day, ensuring a comfortable and pleasant learning environment. If there's one thing that sets St. Mary's apart, it's our desire to make every day exciting for students. And the journey truly begins from Day One.
@@ -205,10 +204,10 @@ New student orientation:A series of orientation activities are held a week prior
 		  </p></p>
           <button class="btn btn-primary">View More</button>
         </div>
-        <div class="col-md-4 col-sm-6 col-xs-12" id="statistics_image">
+        <div class="col-md-4 col-sm-6 col-xs-12" id="content_image">
           <img src="includes/image/mainimg.jpg" alt="Revenue" class="pull-right  center-block">
         </div>
-      </section> <!-- end statistics -->
+      </section> <!-- end content -->
 	  <br>
 	  <hr>
 	  <div class="row" id="moreInfo">
@@ -367,11 +366,11 @@ Our goal at St. Mary's is to go beyond sound theoretical knowledge, to give you 
           <div class="col-sm-3 col-xs-6" id="starwebs">
             <h4>My College</h4>
             <ul class="unstyled">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Vision</a></li>
-              <li><a href="#">Mission</a></li>
-              <li><a href="#">Alumini</a></li>
+              <li>Home</li>
+              <li>About</li>
+              <li>Vision</li>
+              <li>Mission</li>
+
             </ul>
           </div> <!-- end footer-starwebs -->
           <div class="col-sm-3 col-xs-6" id="web_design">
@@ -384,10 +383,12 @@ Our goal at St. Mary's is to go beyond sound theoretical knowledge, to give you 
           </div> <!-- end footer-web_design -->
 
           <div class="col-sm-3 col-xs-6 likes" id="likes">
-            <h4>Like us on</h4>
+            <h4>Feedback on</h4>
             <ul class="unstyled">
-              <li><a href="http://facebook.com/" target="_blank"><img src="includes/image/logo_fb.png" alt="FB" class="img-rounded"></a></li>
-              <li><a href="https://twitter.com/?lang=en" target="_blank"><img src="includes/image/logo_twitter.png" alt="Twitter" class="img-rounded"></a></li>
+        <li>facebook</li>
+				<li>twitter</li>
+				<li>youtube</li>
+				<li>gmail</li>
             </ul>
           </div> <!-- end footer-likes -->
         </div> <!-- end footer-row -->
