--- a/portfolio.html
+++ b/portfolio.html
@@ -91,16 +91,14 @@
 			</figure>
             <p class="description" align="justify">A College is seen as a stepping stone to a sound career. But a degree alone doesn't equip one to become an exceptional professional. That is why our approach at St. Mary's has always been holistic. Education here means - academics coupled with a conducive and friendly environment, new-age technology.
 			</p>
-			<a href="#myModal" class="btn btn-primary" data-toggle="modal">View More</a>
-          </div>
+<button class="btn btn-primary">View More</button>          </div>
           <div class="col-xs-4 showcase_unit">
 		  <h1 class="name">Interaction</h1>
             <figure>
 				<img class="img-responsive center-block" src="includes/image/2.jpg" alt="Error Loading Images"><br><br>
 			</figure>
             <p class="description" align="justify">The management, then contemplated on offering higher education to the students in a better atmosphere and with the state of the art infrastructure. There was a vision and it made its beginning in 2002 when a beautiful, state of art college building emerged in Yousufguda, reflecting the dreams of the management.
-		</p>	<a href="#myModal" class="btn btn-primary" data-toggle="modal">Read More</a>
-          </div>
+<button class="btn btn-primary">View More</button>          </div>
           <div class="col-xs-4 showcase_unit">
 			<h1 class="name" align="center">Classrooms</h1>
             <figure>
@@ -110,8 +108,7 @@
       		    It organizes the collection to provide a prompt and efficient service to the users.
       		    It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.A College is seen as a stepping stone to a sound career
 </p>
-			<a href="#myModal" class="btn btn-primary" data-toggle="modal">View More</a>
-          </div>
+<button class="btn btn-primary">View More</button>          </div>
         </section> <!-- end showcase-1 -->
 		<hr>
         <section class="row" id="showcase-2">
@@ -124,8 +121,7 @@
       		    It organizes the collection to provide a prompt and efficient service to the users.
       		    It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
 </p>
-			<a href="#myModal" class="btn btn-primary" data-toggle="modal">Read More</a>
-          </div>
+<button class="btn btn-primary">View More</button>          </div>
           <div class="col-xs-4 showcase_unit">
 			<h1 class="name" align="center">Campus</h1>
             <figure>
@@ -135,8 +131,7 @@
       		    It organizes the collection to provide a prompt and efficient service to the users.
       		    It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
 </p>
-			<a href="#myModal" class="btn btn-primary" data-toggle="modal">Read More</a>
-          </div>
+<button class="btn btn-primary">View More</button>          </div>
           <div class="col-xs-4 showcase_unit">
 			<h1 class="name" align="center">Theatrix</h1>
             <figure>
@@ -146,8 +141,7 @@
       		    It organizes the collection to provide a prompt and efficient service to the users.
       		    It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
 </p>
-			<a href="#myModal" class="btn btn-primary" data-toggle="modal">View More</a>
-          </div>
+<button class="btn btn-primary">View More</button>          </div>
         </section> <!-- end showcase-2 -->
 		<hr>
         <section class="row" id="showcase-3">
@@ -160,8 +154,7 @@
       		    It organizes the collection to provide a prompt and efficient service to the users.
       		    It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
 </p>
-			<a href="#myModal" class="btn btn-primary" data-toggle="modal">Read More</a>
-          </div>
+<button class="btn btn-primary">View More</button>          </div>
           <div class="col-xs-4 showcase_unit">
 			<h1 class="name" align="center">Studies</h1>
             <figure>
@@ -171,8 +164,7 @@
       		    It organizes the collection to provide a prompt and efficient service to the users.
       		    It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
 </p>
-			<a href="#myModal" class="btn btn-primary" data-toggle="modal">View More</a>
-          </div>
+<button class="btn btn-primary">View More</button>          </div>
           <div class="col-xs-4 showcase_unit">
 			<h1 class="name" align="center">Exams</h1>
             <figure>
@@ -182,8 +174,7 @@
       		    It organizes the collection to provide a prompt and efficient service to the users.
       		    It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
 </p>
-			<a href="#myModal" class="btn btn-primary" data-toggle="modal">View More</a>
-          </div>
+<button class="btn btn-primary">View More</button>          </div>
         </section> <!-- end showcase-3 -->
       </div> <!-- end showcase -->
 
@@ -211,11 +202,11 @@
           </div> <!-- end footer-web_design -->
 
           <div class="col-sm-3 col-xs-6 likes" id="likes">
-            <h4>Like us on</h4>
+            <h4>Feedback on</h4>
             <ul class="unstyled">
-              <li><a href="http://facebook.com/" target="_blank"><img src="includes/image/logo_fb.png" alt="FB" class="img-rounded"></a></li>
-              <li><a href="https://twitter.com/?lang=en" target="_blank"><img src="includes/image/logo_twitter.png" alt="Twitter" class="img-rounded"></a></li>
-
+              <li>facebook</li>
+              <li>twitter</li>
+              <li>google+</li>
             </ul>
           </div> <!-- end footer-likes -->
         </div> <!-- end footer-row -->
