--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
         </div> <!-- end container -->
     </div> <!-- end navbar -->
 
-      <div class="row" id="portfolio_head">
+      <div class="row" id="port">
         <!-- <div class="row" id="portfolio_head"> -->
           <div class="col-xs-8">
             <h1>St Mary's</h1>
@@ -75,8 +75,10 @@
           <div class="col-xs-4 text-right">
             <ul class="unstyled">
             <li><a href="index.html">Home</a></li>
-            <span>/</span>
+            <span> </span>
             <li><a href="portfolio.html">Portfolio</a></li>
+            <span> </span>
+            <li><a href="#">Contact Us</a></li>
             </ul>
           </div>
         <!-- </div> -->
@@ -97,7 +99,7 @@
             <figure>
 				<img class="img-responsive center-block" src="includes/image/2.jpg" alt="Error Loading Images"><br><br>
 			</figure>
-            <p class="description" align="justify">The management, then contemplated on offering higher education to the students in a better atmosphere and with the state of the art infrastructure. There was a vision and it made its beginning in 2002 when a beautiful, state of art college building emerged in Yousufguda, reflecting the dreams of the management.
+            <p class="description" align="justify">The management, then contemplated on offering higher education to the students in a better atmosphere and with the state of the art infrastructure. There was a vision and it made its beginning in 2002 when a beautiful, state of art college building emerged in Yousufguda, reflecting the dreams of the management.</p>
 <button class="btn btn-primary">View More</button>          </div>
           <div class="col-xs-4 showcase_unit">
 			<h1 class="name" align="center">Classrooms</h1>
