--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" href="includes/css/bootstrap.min.css">
-		<link rel="stylesheet" href="includes/css/bootstrap-glyphicons.css">
+		<link rel="stylesheet" href="includes/css/bootstrap.css">
 		<link rel="stylesheet" href="includes/css/style.css">
 		<script src="includes/js/modernizr-2.6.2.min.js"></script>
 	</head>
@@ -23,7 +23,7 @@
 			    	  <span class="icon-bar"></span>
 			      </button>
 			      <a href="index.html" class="navbar-brand">
-				      <span class="siteLogo"> MyCollege</span>
+				      <span class="logo"> MyCollege</span>
 			      </a>
           </header>
 
@@ -121,7 +121,7 @@
 							<h4><span class="glyphicon glyphicon-map-marker"></span> Our Location <small>More like our favourite surf spot</small></h4>
 							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3806.4608321963874!2d78.42427531443974!3d17.437643905944423!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb912649e39cfb%3A0x69292f63f5b6b5b5!2sSt.+Mary&#39;s+Junior+College!5e0!3m2!1sen!2sca!4v1450088551838" width="100%" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
 							<br><br>
-							<article>
+							<!-- <article> -->
 								<p align="justify">The 7 well equipped labs of life science, computer science and physical scienceare spreadin over 3 floors in an area of 4,200 sq. ft.. From the day you join us, we begin thinking of your future.
 
 		Our goal at St. Mary's is to go beyond sound theoretical knowledge, to give you hands-on experience. So that you are fully prepared for the demands and challenges of the real world. This is why we consider preparing you for a career as one of the most important co-curricular activities</p>
@@ -134,12 +134,12 @@
 			It organizes the collection to provide a prompt and efficient service to the users.
 			It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
 		</p>
-							</article>
+
 						</div><!-- end tab-pane -->
 
 						<div class="tab-pane" id="tab2">
 							<h4>More information about <small>MyCollege</small></h4>
-							<article>
+
 								<p align="justify">The 7 well equipped labs of life science, computer science and physical scienceare spreadin over 3 floors in an area of 4,200 sq. ft.. From the day you join us, we begin thinking of your future.
 
 		Our goal at St. Mary's is to go beyond sound theoretical knowledge, to give you hands-on experience. So that you are fully prepared for the demands and challenges of the real world. This is why we consider preparing you for a career as one of the most important co-curricular activities</p>
@@ -152,7 +152,7 @@
 			It organizes the collection to provide a prompt and efficient service to the users.
 			It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
 		</p>
-							</article>
+
 							<hr>
 							<a href="#myModal" role="button" class="btn btn-warning" data-toggle="modal"><span class="glyphicon glyphicon-hand-up"></span> Click for a Modal Window!</a>
 							<div class="modal fade" id="myModal">
@@ -207,18 +207,18 @@
 					</div><!-- end col-sm-6 -->
 
 					<div class="col-sm-6">
-						<article>
+
 							<h3>More about My College</h3>
 							<p>	<p align="justify">The 7 well equipped labs of life science, computer science and physical scienceare spreadin over 3 floors in an area of 4,200 sq. ft.. From the day you join us, we begin thinking of your future.
 
 		Our goal at St. Mary's is to go beyond sound theoretical knowledge, to give you hands-on experience. So that you are fully prepared for the demands and challenges of the real world. This is why we consider preparing you for a career as one of the most important co-curricular activities</p>
 
-						</article>
+
 						<h4>A List Group</h4>
 
 						<section class="list-group">
 							<a href="#" class="list-group-item">
-								<article>
+
 									<h4 class="list-group-item-heading">Alumini</h4>
 									<p class="list-group-item-text">
 										<p align="justify">
@@ -230,10 +230,10 @@
 					It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
 			</p>
 									</p>
-								</article>
+
 							</a>
 							<a href="#" class="list-group-item">
-								<article>
+
 									<h4 class="list-group-item-heading">Departments</h4>
 									<p class="list-group-item-text">
 										<p align="justify">
@@ -242,16 +242,16 @@
 					The collection of books in the library meet the needs, the interests of the students and the staff in a diversified way.
 					It provides resources and services to stimulate intellectual curiosity.
 						</p>
-								<article>
+
 							</a>
 							<a href="#" class="list-group-item">
-								<article>
+
 									<h4 class="list-group-item-heading">Sports</h4>
 									<p class="list-group-item-text">  It facilitates learning within the academic community.
 										It organizes the collection to provide a prompt and efficient service to the users.
 										It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
 		</p>
-								</article>
+
 							</a>
 						</section><!-- list-group -->
 					</div><!-- end col-sm-6 -->
@@ -263,43 +263,43 @@
 			 <div class="col-xs-12 col-sm-4 col-md-4 showcase_unit">
 	 <h1 class="name" align="center">College</h1>
 				 <figure>
-		 <img class="img-responsive center-block" src="includes/image/library.jpg" alt="Error Loading Images"><br><br>
+		 <img class="img-responsive center-block" src="includes/image/9.jpg" alt=""><br><br>
 	 </figure>
 				 <p class="description" align="justify">A College is seen as a stepping stone to a sound career. But a degree alone doesn't equip one to become an exceptional professional. That is why our approach at St. Mary's has always been holistic. Education here means - academics coupled with a conducive and friendly environment, new-age technology.
 	 </p>
-<!-- <button class="btn btn-primary">View More</button>	 -->
+ <button class="btn btn-primary">View More</button>
 		 </div>
 			 <div class="col-xs-12 col-sm-4 col-md-4 showcase_unit">
 	 <h1 class="name">Interaction</h1>
 				 <figure>
-		 <img class="img-responsive center-block" src="includes/image/computer.jpg" alt="Error Loading Images"><br><br>
+		 <img class="img-responsive center-block" src="includes/image/computer.jpg" alt=""><br><br>
 	 </figure>
 				 <p class="description" align="justify">The management, then contemplated on offering higher education to the students in a better atmosphere and with the state of the art infrastructure. There was a vision and it made its beginning in 2002 when a beautiful, state of art college building emerged in Yousufguda, reflecting the dreams of the management.
- <!-- </p>	<button class="btn btn-primary">View More</button> -->
+  </p>	<button class="btn btn-primary">View More</button>
 			 </div>
 			 <div class="col-xs-12 col-sm-4 col-md-4 showcase_unit">
-	 <h1 class="name" align="center">Cafeteria</h1>
+	 <h1 class="name" align="center">Outlook</h1>
 				 <figure>
-		 <img class="img-responsive center-block" src="includes/image/cafteria.jpg" alt="Error Loading Images"><br><br>
+		 <img class="img-responsive center-block" src="includes/image/5.jpg" alt="Error Loading Images"><br><br>
 	 </figure>
 				 <p class="description" align="justify">  It facilitates learning within the academic community.
 					 It organizes the collection to provide a prompt and efficient service to the users.
 					 It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.A College is seen as a stepping stone to a sound career
 </p>
-	 <!-- <button class="btn btn-primary">View More</button> -->
+	  <button class="btn btn-primary">View More</button>
 			 </div>
 		 </section> <!-- end showcase-1 -->
 					</div><!-- end features -->
 
       <section class="row" id="web_insight">
         <div class="col-md-8 col-sm-6 col-xs-12 pull-right" id="web_insight_content">
-			<article>
+
 				<h2>MyCollege</h2>
 				<p> Today, St. Mary’s is the "most happening college" with advanced methods of teaching, catering to the academic and extra-curricular needs of the students. The management leaves no stone unturned to give the best to the students.  Fortune 500 companies have visited the college to hire from campus, through the placement cell. In less than 2 years of the placement cell in being the college has churned out at least 70% employable graduates of those registered with the cell.
 
 We shall continue to endeavor to give the best to our students as we have always done. We are committed to this task and we pray God to lead us in this direction.
 				</p>
-			<article>
+
              <button class="btn btn-primary">View More</button>
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12 pull-left" id="web_insight_image">
@@ -309,12 +309,12 @@ We shall continue to endeavor to give the best to our students as we have always
 
       <section class="row" id="content">
         <div class="col-md-8 col-sm-6 col-xs-12" id="content_content">
-			<article>
+
 				<h2>Friendly Environment</h2>
 				<p>28 Airy and well ventilated classrooms of 610 sq. ft. approx. each,spread on 4 floors of the college, connected by long and clean corridors, maintained through out the day, ensuring a comfortable and pleasant learning environment. If there's one thing that sets St. Mary's apart, it's our desire to make every day exciting for students. And the journey truly begins from Day One.
 
 New student orientation:A series of orientation activities are held a week prior to the beginning of classes for freshers and students joining on transfers. During this week, newcomers get acquainted with the college, staff and with fellow students in an informal environment.
-			</article>
+
 		  </p></p>
           <button class="btn btn-primary">View More</button>
         </div>
@@ -328,17 +328,16 @@ New student orientation:A series of orientation activities are held a week prior
     </main> <!-- end main container -->
 
   <!-- Footer -->
-    <footer>
+    <footer class="container-fluid">
         <div class="row" id="footer">
           <div class="col-sm-3 col-xs-6" id="starwebs">
             <h4>My College</h4>
-            <ul class="unstyled">
-              <li>Home</li>
-              <li>About</li>
-              <li>Vision</li>
-              <li>Mission</li>
-
-            </ul>
+		            <ul class="unstyled">
+		              <li>Home</li>
+		              <li>About</li>
+		              <li>Vision</li>
+		              <li>Mission</li>
+		            </ul>
           </div> <!-- end footer-starwebs -->
           <div class="col-sm-3 col-xs-6" id="web_design">
             <h4>More Information</h4>
@@ -352,25 +351,20 @@ New student orientation:A series of orientation activities are held a week prior
           <div class="col-sm-3 col-xs-6 likes" id="likes">
             <h4>Feedback on</h4>
             <ul class="unstyled">
-        <li>facebook</li>
-				<li>twitter</li>
-				<li>youtube</li>
-				<li>gmail</li>
+				        <li>facebook</li>
+								<li>twitter</li>
+								<li>youtube</li>
+								<li>gmail</li>
             </ul>
           </div> <!-- end footer-likes -->
         </div> <!-- end footer-row -->
        <!-- end container -->
     </footer> <!-- end footer -->
-
     <!-- First try for the online version of jQuery-->
     <script src="../../../code.jquery.com/jquery.js"></script>
-
     <!-- If no online access, fallback to our hardcoded version of jQuery -->
     <script>window.jQuery || document.write('<script src="includes/js/jquery-1.11.3.min.js"><\/script>')</script>
-
     <!-- Bootstrap JS -->
     <script src="includes/js/bootstrap.min.js"></script>
-
   </body>
-
 </html>
