--- a/index.html
+++ b/index.html
@@ -163,14 +163,12 @@
 												<h4 class="modal-title">A Modal Window</h4>
 										</div><!-- end modal-header -->
 											<div class="modal-body">
-												<h4>Text in a modal</h4>
+												<h4>Welcome To Alumini</h4>
 												<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-												<h4>Popovers in a modal</h4>
-												<a href="#" class="btn btn-danger pop" data-toggle="popover" data-placement="top" data-original-title="You clicked it!" data-content="I knew you would.">Don't click this button</a>
-												<h4>Tooltips in a modal</h4>
-												<a href="" data-original-title="Tooltip" rel="tooltip">This link</a> should have a tooltip, and so should <a href="#" data-original-title="Woohoo!" rel="tooltip">this one</a>!
-												<hr>
-												<p><small class="text-muted">PS. This form doesn't do anything. Just a heads up.</small></p>
+
+												<h4>Registration</h4>
+												<a href="" data-original-title="Tooltip" rel="tooltip">sign up </a>
+																								<hr>
 												<form class="form-horizontal">
 													<div class="form-group">
 														<label class="col-lg-2 control-label" for="inputName">Name</label>
