--- a/portfolio.html
+++ b/portfolio.html
@@ -68,17 +68,16 @@
 
       <div class="row" id="port">
         <!-- <div class="row" id="portfolio_head"> -->
-          <div class="col-xs-8">
+          <div class="col-xs-6">
             <h1>St Mary's</h1>
-            <p>future begins here</p>
+            <p>future begins</p>
           </div>
-          <div class="col-xs-4 text-right">
+          <div class="col-xs-6 text-right">
             <ul class="unstyled">
             <li><a href="index.html">Home</a></li>
-            <span> </span>
+
             <li><a href="portfolio.html">Portfolio</a></li>
-            <span> </span>
-            <li><a href="#">Contact Us</a></li>
+
             </ul>
           </div>
         <!-- </div> -->
@@ -182,7 +181,7 @@
 
     </main> <!-- end container -->
 
-    <footer class="container">
+    <footer class="container-fluid">
         <div class="row" id="footer">
           <div class="col-sm-3 col-xs-6" id="starwebs">
             <h4>My College</h4>
