--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@ New student orientation:A series of orientation activities are held a week prior
   <!-- Footer -->
     <footer class="container-fluid">
         <div class="row" id="footer">
-          <div class="col-sm-3 col-xs-6" id="starwebs">
-            <h4>My College</h4>
+          <div class="  col-xs-4 col-sm-4"  id="starwebs">
+            <h4>College</h4>
 		            <ul class="unstyled">
 		              <li>Home</li>
 		              <li>About</li>
@@ -337,17 +337,17 @@ New student orientation:A series of orientation activities are held a week prior
 		              <li>Mission</li>
 		            </ul>
           </div> <!-- end footer-starwebs -->
-          <div class="col-sm-3 col-xs-6" id="web_design">
-            <h4>More Information</h4>
+           <div class=" col-xs-4 col-sm-4 " id="web_design">
+            <h4>About</h4>
             <ul class="unstyled">
               <li>Sports</li>
-              <li>Exam Section</li>
-              <li>Good Facilities</li>
+              <li>Address</li>
+              <li>Parking</li>
             </ul>
           </div> <!-- end footer-web_design -->
 
-          <div class="col-sm-3 col-xs-6 likes" id="likes">
-            <h4>Feedback on</h4>
+          <div class=" col-xs-4 col-sm-4 " id="likes">
+            <h4>Likes</h4>
             <ul class="unstyled">
 				        <li>facebook</li>
 								<li>twitter</li>
