--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 				<h3>Infrastructure</h3>
 				<div class="tabbable">
 					<ul class="nav nav-tabs">
-						<li class="active"><a href="#tab1" data-toggle="tab">Tab 1</a></li>
-						<li><a href="#tab2" data-toggle="tab">Tab 2</a></li>
+						<li class="active"><a href="#tab1" data-toggle="tab">Location</a></li>
+						<li><a href="#tab2" data-toggle="tab">Know More</a></li>
 					</ul>
 					<section class="tab-content">
 						<div class="tab-pane active" id="tab1">
@@ -153,7 +153,7 @@
 			It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
 		</p>
 
-							<hr>
+
 							<a href="#myModal" role="button" class="btn btn-warning" data-toggle="modal"><span class="glyphicon glyphicon-hand-up"></span> Click for a Modal Window!</a>
 							<div class="modal fade" id="myModal">
 								<div class="modal-dialog">
@@ -168,7 +168,7 @@
 
 												<h4>Registration</h4>
 												<a href="" data-original-title="Tooltip" rel="tooltip">sign up </a>
-																								<hr>
+
 												<form class="form-horizontal">
 													<div class="form-group">
 														<label class="col-lg-2 control-label" for="inputName">Name</label>
@@ -187,6 +187,7 @@
 														<label class="col-lg-2 control-label" for="inputMessage">Message</label>
 															<div class="col-lg-10">
 																<textarea class="form-control" id="inputMessage" placeholder="Message" rows="3"></textarea>
+																<br>
 																<button class="btn btn-success pull-right" type="submit">Send!</button>
 															</div>
 													</div>
@@ -268,7 +269,7 @@
  <button class="btn btn-primary">View More</button>
 		 </div>
 			 <div class="col-xs-12 col-sm-4 col-md-4 showcase_unit">
-	 <h1 class="name">Interaction</h1>
+	 <h1 class="name" align="center">Interaction</h1>
 				 <figure>
 		 <img class="img-responsive center-block" src="includes/image/computer.jpg" alt=""><br><br>
 	 </figure>
@@ -313,7 +314,7 @@ We shall continue to endeavor to give the best to our students as we have always
 
 New student orientation:A series of orientation activities are held a week prior to the beginning of classes for freshers and students joining on transfers. During this week, newcomers get acquainted with the college, staff and with fellow students in an informal environment.
 
-		  </p></p>
+		  </p>
           <button class="btn btn-primary">View More</button>
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12" id="content_image">
@@ -321,7 +322,7 @@ New student orientation:A series of orientation activities are held a week prior
         </div>
       </section> <!-- end content -->
 	  <br>
-	  <hr>
+
 
     </main> <!-- end main container -->
 
@@ -331,7 +332,7 @@ New student orientation:A series of orientation activities are held a week prior
           <div class="  col-xs-4 col-sm-4"  id="starwebs">
             <h4>College</h4>
 		            <ul class="unstyled">
-		              <li>Home</li>
+
 		              <li>About</li>
 		              <li>Vision</li>
 		              <li>Mission</li>
@@ -349,12 +350,13 @@ New student orientation:A series of orientation activities are held a week prior
           <div class=" col-xs-4 col-sm-4 " id="likes">
             <h4>Likes</h4>
             <ul class="unstyled">
-				        <li>facebook</li>
-								<li>twitter</li>
-								<li>youtube</li>
-								<li>gmail</li>
+				        <li>Facebook</li>
+								<li>Twitter</li>
+								<li>Youtube</li>
+								<li>Gmail</li>
             </ul>
           </div> <!-- end footer-likes -->
+					<p>copyrights@stmarys all rights reserved</p>
         </div> <!-- end footer-row -->
        <!-- end container -->
     </footer> <!-- end footer -->
