--- a/portfolio.html
+++ b/portfolio.html
@@ -1,84 +1,92 @@
 <!Doctype html>
 <html>
 
-<head>
-    <title>Portfolio</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="includes/css/bootstrap.min.css">
-    <link rel="stylesheet" href="includes/css/bootstrap-glyphicons.css">
-    <link rel="stylesheet" href="includes/css/style.css">
-    <script src="includes/js/modernizr-2.6.2.min.js"></script>
-  </head>
+	<head>
+		<title>Home</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<link rel="stylesheet" href="includes/css/bootstrap.min.css">
+		<link rel="stylesheet" href="includes/css/bootstrap.css">
+		<link rel="stylesheet" href="includes/css/style.css">
+		<script src="includes/js/modernizr-2.6.2.min.js"></script>
+	</head>
   <body>
     <main class="container" id="main">
       <div class="navbar navbar-fixed-top navbar-default" role="navigation">
         <div class="container">
 
           <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
-          <div class="navbar-header">
-          <button class="navbar-toggle collapsed" data-target=".navbar-responsive-collapse" data-toggle="collapse" type="button">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+          <header class="navbar-header">
+			      <button class="navbar-toggle collapsed" data-target=".navbar-responsive-collapse" data-toggle="collapse" type="button">
+				      <span class="icon-bar"></span>
+				      <span class="icon-bar"></span>
+			    	  <span class="icon-bar"></span>
+			      </button>
+			      <a href="index.html" class="navbar-brand">
+				      <span class="logo"> MyCollege</span>
+			      </a>
+          </header>
 
-          <a href="index.html" class="navbar-brand">
-			<span class="siteLogo">My College</span>
-          </a>
-          </div>
+          <nav class="navbar-collapse collapse navbar-responsive-collapse">   <!-- navbar-responsive-collapse -->
+            <ul class="nav navbar-nav navbar-right">
+              <li class="active">
+                <a href="index.html">Home</a>
+              </li>
+              <li>
+                <a href="portfolio.html">Portfolio</a>
+              </li>
+							<ul class="nav navbar-nav pull-right">
+							<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span>JhansiMeduri<strong class="caret"></strong></a>
 
-			<nav class="navbar-collapse collapse navbar-responsive-collapse">   <!-- navbar-responsive-collapse -->
-				<ul class="nav navbar-nav navbar-right">
+					<ul class="dropdown-menu">
 					<li>
-						<a href="index.html">Home</a>
+					<a href="#"><span class="glyphicon glyphicon-wrench"></span> Settings</a>
 					</li>
-					<li class="active">
-						<a href="portfolio.html">Portfolio</a>
-					</li>
-					<li>
-						<a href="www.stmarys.ac.in">More</a>
-					</li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Facilities <strong class="caret"></strong></a>
-						<ul class="dropdown-menu">
-							<li>
-								<a href="#">Library</a>
-							</li>
-							<li>
-								<a href="#">Computer Lab</a>
-							</li>
-							<li>
-								<a href="#">Science Lab</a>
-							</li>
-							<li>
-								<a href="#">English Lab</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
-				<form action="#" class="navbar-form form-horizontal">
-					<input type="text" id="searchInput" class="form-control" placeholder="Search this site...">
-					<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span></button>
-				</form> <!-- end navbar-form -->
 
-			</nav><!-- end navbar-collapse -->
+					<li>
+					<a href="#"><span class="glyphicon glyphicon-refresh"></span> Update Profile</a>
+					</li>
+
+					<li>
+					<a href="#"><span class="glyphicon glyphicon-briefcase"></span> Billing</a>
+					</li>
+
+					<li class="divider"></li>
+
+					<li>
+					<a href="#"><span class="glyphicon glyphicon-off"></span> Sign out</a>
+					</li>
+					</ul>
+					</li>
+					</ul>
+            <form action="#" class="navbar-form form-horizontal pull-left" >
+              <input type="text" id="searchInput" class="form-control" placeholder="Search this site...">
+              <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span></button>
+            </form> <!-- end navbar-form -->
+
+          </nav><!-- end navbar-collapse -->
         </div> <!-- end container -->
-    </div> <!-- end navbar -->
+      </div> <!-- end navbar -->
 
       <div class="row" id="port">
         <!-- <div class="row" id="portfolio_head"> -->
-          <div class="col-xs-6">
+          <div class="col-xs-4">
             <h1>St Mary's</h1>
-            <p>future begins</p>
+            <p>Future begins</p>
           </div>
-          <div class="col-xs-6 text-right">
-            <ul class="unstyled">
+          <div class="col-xs-8 text-right">
+            <ol class="breadcrumb">
+              <li>HOF</li>
+              <li>Library</li>
+              <li>Data</li>
+            </ol>
+            <!-- <ul class="unstyled">
             <li><a href="index.html">Home</a></li>
 
             <li><a href="portfolio.html">Portfolio</a></li>
 
-            </ul>
+            </ul> -->
           </div>
         <!-- </div> -->
       </div>
@@ -183,46 +191,41 @@
 
     <footer class="container-fluid">
         <div class="row" id="footer">
-          <div class="col-sm-3 col-xs-6" id="starwebs">
-            <h4>My College</h4>
-            <ul class="unstyled">
-              <li>Home</li>
-              <li>About</li>
-              <li>Vision</li>
-              <li>Alumini</li>
+          <div class="  col-xs-4 col-sm-4"  id="starwebs">
+            <h4>College</h4>
+		            <ul class="unstyled">
 
-            </ul>
+		              <li>About</li>
+		              <li>Vision</li>
+		              <li>Mission</li>
+		            </ul>
           </div> <!-- end footer-starwebs -->
-          <div class="col-sm-3 col-xs-6" id="web_design">
-            <h4>More Information</h4>
+           <div class=" col-xs-4 col-sm-4 " id="web_design">
+            <h4>About</h4>
             <ul class="unstyled">
               <li>Sports</li>
-              <li>Placements</li
-              <li>Facilities</li>
+              <li>Address</li>
+              <li>Parking</li>
             </ul>
           </div> <!-- end footer-web_design -->
 
-          <div class="col-sm-3 col-xs-6 likes" id="likes">
-            <h4>Feedback on</h4>
+          <div class=" col-xs-4 col-sm-4 " id="likes">
+            <h4>Likes</h4>
             <ul class="unstyled">
-              <li>facebook</li>
-              <li>twitter</li>
-              <li>google+</li>
+				        <li>Facebook</li>
+								<li>Twitter</li>
+								<li>Gmail</li>
             </ul>
           </div> <!-- end footer-likes -->
+					<p>copyrights@stmarys all rights reserved</p>
         </div> <!-- end footer-row -->
-      </div> <!-- end container -->
+       <!-- end container -->
     </footer> <!-- end footer -->
-
     <!-- First try for the online version of jQuery-->
     <script src="../../../code.jquery.com/jquery.js"></script>
-
     <!-- If no online access, fallback to our hardcoded version of jQuery -->
     <script>window.jQuery || document.write('<script src="includes/js/jquery-1.11.3.min.js"><\/script>')</script>
-
     <!-- Bootstrap JS -->
     <script src="includes/js/bootstrap.min.js"></script>
-
   </body>
-
 </html>
