--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ New student orientation:A series of orientation activities are held a week prior
           <div class=" col-xs-4 col-sm-4 " id="likes">
             <h4>Likes</h4>
             <ul class="unstyled">
-				        <li>Facebook</li>
+				        <li>Youtube</li>
 								<li>Twitter</li>
 								<li>Gmail</li>
             </ul>
