--- a/portfolio.html
+++ b/portfolio.html
@@ -71,14 +71,14 @@
 
       <div class="row" id="port">
         <!-- <div class="row" id="portfolio_head"> -->
-          <div class="col-xs-4">
+          <div class="col-xs-6">
             <h1>St Mary's</h1>
             <p>Future begins</p>
           </div>
-          <div class="col-xs-8 text-right">
+          <div class="col-xs-6 text-right">
             <ol class="breadcrumb">
               <li>HOF</li>
-              <li>Library</li>
+
               <li>Data</li>
             </ol>
             <!-- <ul class="unstyled">
@@ -212,7 +212,7 @@
           <div class=" col-xs-4 col-sm-4 " id="likes">
             <h4>Likes</h4>
             <ul class="unstyled">
-				        <li>Facebook</li>
+				        <li>Youtube</li>
 								<li>Twitter</li>
 								<li>Gmail</li>
             </ul>
