--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
 
 	 <div class="row" id="featuresHeading">
 		 <section class="row" id="showcase-1">
+			 <h1 class="name" align="center">Institution</h1>
 			 <div class="col-xs-12 col-sm-4 col-md-4 showcase_unit">
 	 <h1 class="name" align="center">College</h1>
 				 <figure>
