--- a/portfolio.html
+++ b/portfolio.html
@@ -70,29 +70,23 @@
       </div> <!-- end navbar -->
 
       <div class="row" id="port">
-        <!-- <div class="row" id="portfolio_head"> -->
-          <div class="col-xs-6">
+
+          <div class="col-xs-12">
             <h1>St Mary's</h1>
             <p>Future begins</p>
           </div>
-          <div class="col-xs-6 text-right">
+          <div class="col-xs-12 text-right">
             <ol class="breadcrumb">
               <li>HOF</li>
-
               <li>Data</li>
             </ol>
-            <!-- <ul class="unstyled">
-            <li><a href="index.html">Home</a></li>
-
-            <li><a href="portfolio.html">Portfolio</a></li>
-
-            </ul> -->
           </div>
-        <!-- </div> -->
+S
       </div>
 
       <div class="row" id="showcase">
         <section class="row" id="showcase-1">
+						<h1 class="name" align="center">Facilities for Students</h1>
           <div class="col-xs-4 showcase_unit">
 			<h1 class="name" align="center">College</h1>
             <figure>
@@ -102,7 +96,7 @@
 			</p>
 <button class="btn btn-primary">View More</button>          </div>
           <div class="col-xs-4 showcase_unit">
-		  <h1 class="name">Interaction</h1>
+		  <h1 class="name" align="center">Interaction</h1>
             <figure>
 				<img class="img-responsive center-block" src="includes/image/2.jpg" alt="Error Loading Images"><br><br>
 			</figure>
@@ -119,10 +113,10 @@
 </p>
 <button class="btn btn-primary">View More</button>          </div>
         </section> <!-- end showcase-1 -->
-		<hr>
+
         <section class="row" id="showcase-2">
           <div class="col-xs-4 showcase_unit">
-			<h1 class="name" align="center">Friendly Atmosphere</h1>
+			<h1 class="name" align="center"> Atmosphere</h1>
             <figure>
 				<img class="img-responsive center-block" src="includes/image/4.jpg" alt="Error Loading Images"><br><br>
 			</figure>
