--- a/portfolio.html
+++ b/portfolio.html
@@ -72,8 +72,7 @@
       <div class="row" id="port">
 
           <div class="col-xs-12">
-            <h1>St Mary's</h1>
-            <p>Future begins</p>
+            <h1>St Mary's<small>Future Begins Here</small></h1>
           </div>
           <div class="col-xs-12 text-right">
             <ol class="breadcrumb">
