--- a/index.html
+++ b/index.html
@@ -109,49 +109,46 @@
       </div> <!-- end myCarousel -->
 
 			<div class="row" id="moreInfo">
-			<div class="col-sm-6">
-				<h3>Infrastructure</h3>
-				<div class="tabbable">
-					<ul class="nav nav-tabs">
-						<li class="active"><a href="#tab1" data-toggle="tab">Location</a></li>
-						<li><a href="#tab2" data-toggle="tab">Know More</a></li>
-					</ul>
+				<div class="col-sm-6">
+					<h3>Infrastructure</h3>
+						<div class="tabbable">
+							<ul class="nav nav-tabs">
+								<li class="active"><a href="#tab1" data-toggle="tab">Location</a></li>
+								<li><a href="#tab2" data-toggle="tab">Know More</a></li>
+							</ul>
 					<section class="tab-content">
 						<div class="tab-pane active" id="tab1">
 							<h4><span class="glyphicon glyphicon-map-marker"></span> Our Location <small>More like our favourite surf spot</small></h4>
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3806.4608321963874!2d78.42427531443974!3d17.437643905944423!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb912649e39cfb%3A0x69292f63f5b6b5b5!2sSt.+Mary&#39;s+Junior+College!5e0!3m2!1sen!2sca!4v1450088551838" width="100%" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3806.4608321963874!2d78.42427531443974!3d17.437643905944423!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb912649e39cfb%3A0x69292f63f5b6b5b5!2sSt.+Mary&#39;s+Junior+College!5e0!3m2!1sen!2sca!4v1450088551838" width="100%" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
 							<br><br>
 							<!-- <article> -->
 								<p align="justify">The 7 well equipped labs of life science, computer science and physical scienceare spreadin over 3 floors in an area of 4,200 sq. ft.. From the day you join us, we begin thinking of your future.
-
-		Our goal at St. Mary's is to go beyond sound theoretical knowledge, to give you hands-on experience. So that you are fully prepared for the demands and challenges of the real world. This is why we consider preparing you for a career as one of the most important co-curricular activities</p>
-								<p align="justify">
-			St. Mary's library has a comprehensive collection of books, encyclopedias, dictionaries, books on personality development, general books and newspapers, magazines, periodicals, journals etc.
-			The library personnel is always engaged in the collection of materials that support the curriculum. It also provides accessibility to those materials.
-			The collection of books in the library meet the needs, the interests of the students and the staff in a diversified way.
-			It provides resources and services to stimulate intellectual curiosity.
-			It facilitates learning within the academic community.
-			It organizes the collection to provide a prompt and efficient service to the users.
-			It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
-		</p>
+											Our goal at St. Mary's is to go beyond sound theoretical knowledge, to give you hands-on experience. So that you are fully prepared for the demands and challenges of the real world. This is why we consider preparing you for a career as one of the most important co-curricular activities</p>
+									<p align="justify">
+											St. Mary's library has a comprehensive collection of books, encyclopedias, dictionaries, books on personality development, general books and newspapers, magazines, periodicals, journals etc.
+											The library personnel is always engaged in the collection of materials that support the curriculum. It also provides accessibility to those materials.
+											The collection of books in the library meet the needs, the interests of the students and the staff in a diversified way.
+											It provides resources and services to stimulate intellectual curiosity.
+											It facilitates learning within the academic community.
+											It organizes the collection to provide a prompt and efficient service to the users.
+											It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
+										</p>
 
 						</div><!-- end tab-pane -->
 
 						<div class="tab-pane" id="tab2">
 							<h4>More information about <small>MyCollege</small></h4>
-
 								<p align="justify">The 7 well equipped labs of life science, computer science and physical scienceare spreadin over 3 floors in an area of 4,200 sq. ft.. From the day you join us, we begin thinking of your future.
-
-		Our goal at St. Mary's is to go beyond sound theoretical knowledge, to give you hands-on experience. So that you are fully prepared for the demands and challenges of the real world. This is why we consider preparing you for a career as one of the most important co-curricular activities</p>
-								<p align="justify">
-			St. Mary's library has a comprehensive collection of books, encyclopedias, dictionaries, books on personality development, general books and newspapers, magazines, periodicals, journals etc.
-			The library personnel is always engaged in the collection of materials that support the curriculum. It also provides accessibility to those materials.
-			The collection of books in the library meet the needs, the interests of the students and the staff in a diversified way.
-			It provides resources and services to stimulate intellectual curiosity.
-			It facilitates learning within the academic community.
-			It organizes the collection to provide a prompt and efficient service to the users.
-			It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
-		</p>
+									Our goal at St. Mary's is to go beyond sound theoretical knowledge, to give you hands-on experience. So that you are fully prepared for the demands and challenges of the real world. This is why we consider preparing you for a career as one of the most important co-curricular activities</p>
+										<p align="justify">
+											St. Mary's library has a comprehensive collection of books, encyclopedias, dictionaries, books on personality development, general books and newspapers, magazines, periodicals, journals etc.
+											The library personnel is always engaged in the collection of materials that support the curriculum. It also provides accessibility to those materials.
+											The collection of books in the library meet the needs, the interests of the students and the staff in a diversified way.
+											It provides resources and services to stimulate intellectual curiosity.
+											It facilitates learning within the academic community.
+											It organizes the collection to provide a prompt and efficient service to the users.
+											It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
+										</p>
 
 
 							<a href="#myModal" role="button" class="btn btn-warning" data-toggle="modal"><span class="glyphicon glyphicon-hand-up"></span> Click for a Modal Window!</a>
@@ -206,76 +203,66 @@
 					</div><!-- end col-sm-6 -->
 
 					<div class="col-sm-6">
-
 							<h3>More about My College</h3>
-							<p>	<p align="justify">The 7 well equipped labs of life science, computer science and physical scienceare spreadin over 3 floors in an area of 4,200 sq. ft.. From the day you join us, we begin thinking of your future.
-
-		Our goal at St. Mary's is to go beyond sound theoretical knowledge, to give you hands-on experience. So that you are fully prepared for the demands and challenges of the real world. This is why we consider preparing you for a career as one of the most important co-curricular activities</p>
-
-
+							<p align="justify">The 7 well equipped labs of life science, computer science and physical scienceare spreadin over 3 floors in an area of 4,200 sq. ft.. From the day you join us, we begin thinking of your future.
+								Our goal at St. Mary's is to go beyond sound theoretical knowledge, to give you hands-on experience. So that you are fully prepared for the demands and challenges of the real world. This is why we consider preparing you for a career as one of the most important co-curricular activities</p>
 						<h4>A List Group</h4>
-
-						<section class="list-group">
-							<a href="#" class="list-group-item">
-
+							<section class="list-group">
+								<a href="#" class="list-group-item">
 									<h4 class="list-group-item-heading">Alumini</h4>
 									<p class="list-group-item-text">
 										<p align="justify">
-
-					The collection of books in the library meet the needs, the interests of the students and the staff in a diversified way.
-					It provides resources and services to stimulate intellectual curiosity.
-					It facilitates learning within the academic community.
-					It organizes the collection to provide a prompt and efficient service to the users.
-					It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
-			</p>
-									</p>
+											The collection of books in the library meet the needs, the interests of the students and the staff in a diversified way.
+											It provides resources and services to stimulate intellectual curiosity.
+											It facilitates learning within the academic community.
+											It organizes the collection to provide a prompt and efficient service to the users.
+											It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
+											</p>
+										</p>
 
 							</a>
 							<a href="#" class="list-group-item">
-
 									<h4 class="list-group-item-heading">Departments</h4>
 									<p class="list-group-item-text">
-										<p align="justify">
-					St. Mary's library has a comprehensive collection of books, encyclopedias, dictionaries, books on personality development, general books and newspapers, magazines, periodicals, journals etc.
-					The library personnel is always engaged in the collection of materials that support the curriculum. It also provides accessibility to those materials.
-					The collection of books in the library meet the needs, the interests of the students and the staff in a diversified way.
-					It provides resources and services to stimulate intellectual curiosity.
-						</p>
-
-							</a>
+									<p align="justify">
+											St. Mary's library has a comprehensive collection of books, encyclopedias, dictionaries, books on personality development, general books and newspapers, magazines, periodicals, journals etc.
+											The library personnel is always engaged in the collection of materials that support the curriculum. It also provides accessibility to those materials.
+											The collection of books in the library meet the needs, the interests of the students and the staff in a diversified way.
+											It provides resources and services to stimulate intellectual curiosity.
+									</p>
+											</a>
 							<a href="#" class="list-group-item">
-
 									<h4 class="list-group-item-heading">Sports</h4>
 									<p class="list-group-item-text">  It facilitates learning within the academic community.
 										It organizes the collection to provide a prompt and efficient service to the users.
 										It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.
-		</p>
-
+									</p>
 							</a>
 						</section><!-- list-group -->
 					</div><!-- end col-sm-6 -->
 				</div><!-- end moreInfo -->
-	  <hr>
+
 
 	 <div class="row" id="featuresHeading">
 		 <section class="row" id="showcase-1">
 			 <h1 class="name" align="center">Institution</h1>
 			 <div class="col-xs-12 col-sm-4 col-md-4 showcase_unit">
-	 <h1 class="name" align="center">College</h1>
+					 <h1 class="name" align="center">College</h1>
 				 <figure>
-		 <img class="img-responsive center-block" src="includes/image/9.jpg" alt=""><br><br>
-	 </figure>
+					 <img class="img-responsive center-block" src="includes/image/9.jpg" alt=""><br><br>
+	 			</figure>
 				 <p class="description" align="justify">A College is seen as a stepping stone to a sound career. But a degree alone doesn't equip one to become an exceptional professional. That is why our approach at St. Mary's has always been holistic. Education here means - academics coupled with a conducive and friendly environment, new-age technology.
-	 </p>
- <button class="btn btn-primary">View More</button>
+	 			</p>
+ 				<button class="btn btn-primary">View More</button>
 		 </div>
 			 <div class="col-xs-12 col-sm-4 col-md-4 showcase_unit">
-	 <h1 class="name" align="center">Interaction</h1>
+					 <h1 class="name" align="center">Interaction</h1>
 				 <figure>
-		 <img class="img-responsive center-block" src="includes/image/computer.jpg" alt=""><br><br>
-	 </figure>
-				 <p class="description" align="justify">The management, then contemplated on offering higher education to the students in a better atmosphere and with the state of the art infrastructure. There was a vision and it made its beginning in 2002 when a beautiful, state of art college building emerged in Yousufguda, reflecting the dreams of the management.
-  </p>	<button class="btn btn-primary">View More</button>
+					 <img class="img-responsive center-block" src="includes/image/computer.jpg" alt=""><br><br>
+	 			</figure>
+					 <p class="description" align="justify">The management, then contemplated on offering higher education to the students in a better atmosphere and with the state of the art infrastructure. There was a vision and it made its beginning in 2002 when a beautiful, state of art college building emerged in Yousufguda, reflecting the dreams of the management.
+  				</p>
+					<button class="btn btn-primary">View More</button>
 			 </div>
 			 <div class="col-xs-12 col-sm-4 col-md-4 showcase_unit">
 	 <h1 class="name" align="center">Outlook</h1>
@@ -285,22 +272,19 @@
 				 <p class="description" align="justify">  It facilitates learning within the academic community.
 					 It organizes the collection to provide a prompt and efficient service to the users.
 					 It serves as a nucleus of information in every field of subjects be it -Science, Arts and Technology.A College is seen as a stepping stone to a sound career
-</p>
-	  <button class="btn btn-primary">View More</button>
+				</p>
+			  <button class="btn btn-primary">View More</button>
 			 </div>
 		 </section> <!-- end showcase-1 -->
-					</div><!-- end features -->
+		</div><!-- end features -->
 
       <section class="row" id="web_insight">
         <div class="col-md-8 col-sm-6 col-xs-12 pull-right" id="web_insight_content">
-
-				<h2>MyCollege</h2>
-				<p> Today, St. Mary’s is the "most happening college" with advanced methods of teaching, catering to the academic and extra-curricular needs of the students. The management leaves no stone unturned to give the best to the students.  Fortune 500 companies have visited the college to hire from campus, through the placement cell. In less than 2 years of the placement cell in being the college has churned out at least 70% employable graduates of those registered with the cell.
-
-We shall continue to endeavor to give the best to our students as we have always done. We are committed to this task and we pray God to lead us in this direction.
-				</p>
-
-             <button class="btn btn-primary">View More</button>
+						<h2>MyCollege</h2>
+						<p> Today, St. Mary’s is the "most happening college" with advanced methods of teaching, catering to the academic and extra-curricular needs of the students. The management leaves no stone unturned to give the best to the students.  Fortune 500 companies have visited the college to hire from campus, through the placement cell. In less than 2 years of the placement cell in being the college has churned out at least 70% employable graduates of those registered with the cell.
+		            We shall continue to endeavor to give the best to our students as we have always done. We are committed to this task and we pray God to lead us in this direction.
+						</p>
+         		<button class="btn btn-primary">View More</button>
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12 pull-left" id="web_insight_image">
           <img src="includes/image/mainimg1.jpg" alt="Web Insight" class="center-block">
@@ -330,15 +314,15 @@ New student orientation:A series of orientation activities are held a week prior
   <!-- Footer -->
     <footer class="container-fluid">
         <div class="row" id="footer">
-          <div class="  col-xs-4 col-sm-4"  id="starwebs">
-            <h4>College</h4>
+        	  <div class="  col-xs-4 col-sm-4"  id="starwebs">
+            	<h4>College</h4>
 		            <ul class="unstyled">
 
 		              <li>About</li>
 		              <li>Vision</li>
 		              <li>Mission</li>
 		            </ul>
-          </div> <!-- end footer-starwebs -->
+        	  </div> <!-- end footer-starwebs -->
            <div class=" col-xs-4 col-sm-4 " id="web_design">
             <h4>About</h4>
             <ul class="unstyled">
@@ -350,11 +334,11 @@ New student orientation:A series of orientation activities are held a week prior
 
           <div class=" col-xs-4 col-sm-4 " id="likes">
             <h4>Likes</h4>
-            <ul class="unstyled">
-				        <li>Youtube</li>
-								<li>Twitter</li>
-								<li>Gmail</li>
-            </ul>
+	            <ul class="unstyled">
+					        <li>Youtube</li>
+									<li>Twitter</li>
+									<li>Gmail</li>
+	            </ul>
           </div> <!-- end footer-likes -->
 					<p>copyrights@stmarys all rights reserved</p>
         </div> <!-- end footer-row -->
