--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
               <li class="active">
                 <a href="index.html">Home</a>
               </li>
-              <li>
+						
+              <li class="active">
                 <a href="portfolio.html">Portfolio</a>
               </li>
 
